# MR-msg-transfer

./: CMakeLists.txt  README.md  package.xml  sync.sh  多机通讯.md
scripts/: client.py  config-vehicle.yaml  edge.py  edge_debug.py  edge_robot.py  pub_robot_1.py  pub_test.py  robot_1.py  robot_2.py  robot_3.py  robot_debug .py  robot_debug_0.py  robot_debug_1.py  robot_debug_2.py
scripts/config/: config-edge-e2r.yaml  config-edge-r2e.yaml  config-edge-recv-demo.yaml  config-edge-recv.yaml  config-edge-send-1.yaml  config-edge-send-2.yaml  config-edge-send-3.yaml  config-robot-0.yaml  config-robot-1.yaml  config-robot-2.yaml  config-robot-recv-1.yaml  config-robot-recv-3.yaml  config-robot-send-1.yaml  config-robot-send-2.yaml
scripts/test/: edge.py  edge_robot_1.py  pub_robot_2.py  pub_test.py  rcv_test.py  robot_1.py  robot_2.py  robot_debug_0.py  robot_debug_1.py  robot_debug_2.py  test_dmsg.py  test_submap.py
